--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "ryker/brenhouse-theme-settings-module",
   "description": "N/A",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/framework": "0.0.*"
+    "php": "~5.5.0|~5.6.0|~7.0.0"
   },
   "type": "magento2-module",
   "version": "1.0.0",
