--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "name": "ryker/brenhouse-theme-settings-module",
-  "description": "N/A",
+  "description": "The Brenhouse Responsive Theme is a theme designed for Magento 2, 2.1 commerce platform",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0"
   },
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
